--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev": "cross-env NODE_ENV=local nodemon -r tsconfig-paths/register src/index.ts",
     "build": "tsc -p . && tsc-alias",
-    "start": "node index.js",
+    "start": "node dist/index.js",
     "deploy": "git push heroku master",
     "migrate": "cross-env NODE_ENV=local knex --knexfile ./src/config/knexfile.ts migrate:latest --migrations-directory  ./migrations",
     "migrate:make": "knex migrate:make migration_name --knexfile ./src/config/knexfile.ts"
