--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,8 @@
       "no-underscore-dangle": 0,
       "no-unused-vars": 0,
       "new-cap": 0,
-      "indent": 0
+      "indent": 0,
+      "no-undef": 0
 
       },
     "settings": {
